@@ -7,6 +7,8 @@ Version 1.8.5
        for x64. (Stefan)
 - BUG: Issue #601: Crash fetching properties
        in CfM dialog. (Stefan)
+- BUG: Issue #602: Log dialog message loses
+       formatting after clicking a link. (Stefan)
 
 Version 1.8.4
 - BUG: Issue 584: Revert from log dialog bottom pane
